data/all_generated_tests/raw_wast_tests/loop_MismanagementofBlockNesting_649.wast
;; 10. **Test: Loop with Unwinding and Finalizing Sequence**     - **Description**: Loop followed by a sequence that finalizes with an `end` block, and includes branches that skip the sequence.     - **Constraint Being Checked**: Unwinding from loop and ensuring proper execution of subsequent instruction sequence.     - **Mismanagement**: Mismanagement of stack leading to incorrect finalizing execution or skipping steps.

(assert_invalid
  (module
    (func (loop (result i32)
      (block (br 1))
      (drop)
    ))
  )
  "type mismatch"
)